@startuml
!theme cloudscape-design
title BIST MVVM Architecture (Improved Layout)

' A4 사이즈 출력을 위한 레이아웃 최적화
top to bottom direction
skinparam linetype ortho
skinparam wrapWidth 250
scale max 1200 width

' 기타 스타일링
skinparam packageStyle folder
skinparam classAttributeIconSize 0
skinparam groupInheritance 2 ' 상속/구현 화살표 병합

' --- 패키지 정의 (클래스 내용은 동일하므로 생략) ---

package "View (fragment)" as View {
  class "BluetoothTestFragment"
  class "CpuTestFragment"
  ' ...
}

package "ViewModel" as ViewModel {
  class "MainViewModel"
  class "BaseTestViewModel"
  class "BluetoothTestViewModel"
  ' ...
}

package "Model (test)" as Model {
  interface "Test"
  class "BluetoothTest"
  class "CpuTest"
  ' ...
}

package "Util" as Util {
  class "LogRepository"
  class "SysInfo"
  ' ...
}

' --- 관계 정의 (아키텍처 레벨) ---

' 1. 패키지 간의 주요 의존성 흐름을 정의합니다.
View ..> ViewModel : uses
ViewModel ..> Model : uses
ViewModel ..> Util : uses

' 2. 패키지들을 세로로 정렬하기 위해 보이지 않는 화살표를 사용합니다.
View -[hidden]up-> ViewModel
ViewModel -[hidden]down-> Model

' 3. 가장 중요한 상속 관계만 명시하여 구조를 보충합니다.
Model.Test <|.. Model.BluetoothTest
Model.Test <|.. Model.CpuTest
' ... (다른 Test 구현들) ...

ViewModel.BaseTestViewModel <|-- ViewModel.BluetoothTestViewModel
ViewModel.BaseTestViewModel <|-- ViewModel.CpuTestViewModel
' ... (다른 ViewModel 상속들) ...

@enduml
